//plugins {
//    id 'java'
//}

allprojects {
    apply plugin: 'idea'

    group 'edu.pku'
    version '1.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects{
    apply plugin: 'java'
    sourceCompatibility = '11'
    targetCompatibility = '11'

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
        implementation 'org.atteo.classindex:classindex:3.10'
        implementation 'org.slf4j:slf4j-log4j12:2.0.0-alpha2'

        implementation('org.jgrapht:jgrapht-core:1.5.0') {
            force = true
        }
        implementation 'org.jgrapht:jgrapht-io:1.5.0'
        implementation 'commons-io:commons-io:2.8.0'
    }

    test {
        useJUnitPlatform()
    }
}

configure(subprojects.findAll { it.name != 'core' }) {
    dependencies {
        implementation project(':core')
    }
}

